--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
-{
-     "liveSassCompile.settings.formats": [
+{     "liveSassCompile.settings.formats": [
           {
                "format": "expanded",
                "extensionName": ".css",
@@ -11,10 +10,7 @@
                "savePath": "/dist/css"
           }
      ],
-     "liveSassCompile.settings.excludeList": [
-          "**/node_modules/**",
-          ".vscode/**"
-     ],
+     "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
      "liveSassCompile.settings.generateMap": true,
-     "liveSassCompile.settings.autoprefix": [">1%", "last 2 versions"]
+     "liveSassCompile.settings.autoprefix": ["defaults"]
 }
